--- a/css/scss/_menu-side.scss
+++ b/css/scss/_menu-side.scss
@@ -98,6 +98,7 @@
                 margin: 0px;
                 border: none;
             }
+            margin: 0px;
         }
         width: 250px;
         background-color: $hitam;
