--- a/css/scss/_menu.scss
+++ b/css/scss/_menu.scss
@@ -61,6 +61,7 @@
                         background-color: $putih;
                         left: 158px;
                         top: -3px;
+                        width: 100%;
                         border-left: 3px solid $orange;
                     }
                     top: 44px;
