--- a/css/scss/_menu-side.scss
+++ b/css/scss/_menu-side.scss
@@ -24,6 +24,11 @@
                 font-size: 12px;
                 font-weight: 600;
                 letter-spacing: 3px;
+                -webkit-transition: .2s color ease-in;
+                -moz-transition: .2s color ease-in;
+                -ms-transition: .2s color ease-in;
+                -o-transition: .2s color ease-in;
+                transition: .2s color ease-in;
             }
             a:hover {
                 text-decoration: none;
@@ -42,6 +47,11 @@
                         font-family: 'PT Serif', serif;
                         font-size: 12px;
                         font-weight: 600;
+                        -webkit-transition: .2s color ease-in;
+                        -moz-transition: .2s color ease-in;
+                        -ms-transition: .2s color ease-in;
+                        -o-transition: .2s color ease-in;
+                        transition: .2s color ease-in;
                     }
                     a:hover {
                         text-decoration: none;
@@ -59,6 +69,11 @@
                                 font-family: 'PT Serif', serif;
                                 font-size: 12px;
                                 font-weight: 600;
+                                -webkit-transition: .2s color ease-in;
+                                -moz-transition: .2s color ease-in;
+                                -ms-transition: .2s color ease-in;
+                                -o-transition: .2s color ease-in;
+                                transition: .2s color ease-in;
                             }
                             a:hover {
                                 text-decoration: none;
@@ -68,10 +83,18 @@
                                 li {
                                     a {
                                         color: $hitam;
+                                        padding-left: 15px;
+                                        -webkit-transition: .2s color ease-in;
+                                        -moz-transition: .2s color ease-in;
+                                        -ms-transition: .2s color ease-in;
+                                        -o-transition: .2s color ease-in;
+                                        transition: .2s color ease-in;
                                     }
                                     a:hover {
                                         color: $orange;
                                     }
+
+                                border-top: 1px solid $grey;
                                 }
                                 background-color: $putih;
                                 position: relative;
@@ -79,8 +102,9 @@
                                 top: -18px;
                                 display: none;
                                 border-left: 3px solid $orange;
-                                width: 150px;
+                                width: 100%;
                                 box-shadow: $shadow-dropdown;
+                                padding: 0px;
                             }
                             list-style: none;
                             height: 30px;
