--- a/css/custom.css
+++ b/css/custom.css
@@ -591,6 +591,14 @@ body {
                   transition: .2s color ease-in; }
                 .menu-side .panel-group .panel .dropdown-custom ul li .dropdown-custom-2 li a:hover {
                   color: #EE7E32; }
+            .menu-side .panel-group .panel .dropdown-custom ul li .dropdown-custom-2::before {
+              content: "";
+              position: absolute;
+              left: -11%;
+              margin-left: 30;
+              border-width: 10px;
+              border-style: solid;
+              border-color: transparent #EE7E32 transparent transparent; }
           .menu-side .panel-group .panel .dropdown-custom ul li:hover .dropdown-custom-2 {
             display: block; } }
 .banner-slider {
