--- a/css/custom.css
+++ b/css/custom.css
@@ -275,6 +275,7 @@ body {
             .header-fix .wr-header-fix .navigator .cart .dropdown-custom li .list-cart .heading-item .title-cart a:hover {
               text-decoration: none; }
             .header-fix .wr-header-fix .navigator .cart .dropdown-custom li .list-cart .heading-item .hapus-cart button {
+              color: #212121;
               background-color: transparent;
               padding: 0px;
               -webkit-transition: .2s color ease-in;
@@ -318,6 +319,8 @@ body {
               color: #fff; }
             .header-fix .wr-header-fix .navigator .cart .dropdown-custom li .view-checkout .checkout a:hover {
               background-color: #212121; }
+        .header-fix .wr-header-fix .navigator .cart .dropdown-backdrop {
+          display: none; }
 
   .banner-slider {
     padding-top: 138px; } }
