--- a/css/master.scss
+++ b/css/master.scss
@@ -13,4 +13,5 @@
 @import 'scss/latest-post';
 @import 'scss/footer';
 @import 'scss/copyright';
-
+@import 'scss/general-heading';
+@import 'scss/list-product';
