--- a/css/custom.css
+++ b/css/custom.css
@@ -1703,11 +1703,18 @@ body {
       font-weight: 600; }
 
 .general-heading {
-  background-color: #212121;
+  background: linear-gradient(#EBEBEB, #ECECEC, #EDEDED, #EEEEEE, #EFEFEF, #F0F0F0);
+  /* Standard syntax */
+  background: -webkit-linear-gradient(#EBEBEB, #ECECEC, #EDEDED, #EEEEEE, #EFEFEF, #F0F0F0);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#EBEBEB, #ECECEC, #EDEDED, #EEEEEE, #EFEFEF, #F0F0F0);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#EBEBEB, #ECECEC, #EDEDED, #EEEEEE, #EFEFEF, #F0F0F0);
+  /* For Firefox 3.6 to 15 */
   height: 150px;
   padding: 56px 0px; }
   .general-heading h1 {
-    color: #fff;
+    color: #212121;
     margin: 0px;
     letter-spacing: 2px; }
 
