--- a/css/custom.css
+++ b/css/custom.css
@@ -444,7 +444,8 @@ body {
               border-top: 1px solid #ECECEC;
               display: inline-block;
               width: 100%;
-              height: 39px; }
+              height: 39px;
+              position: relative; }
               .menu-fix .wr-menu-fix .menu ul li .dropdown-custom li a {
                 padding: 10px 20px;
                 font-family: 'PT Serif', serif;
@@ -461,16 +462,16 @@ body {
               display: none;
               position: absolute;
               background-color: #fff;
-              left: 158px;
-              top: -3px;
+              left: 100%;
+              top: 0;
               width: 100%;
               border-left: 3px solid #EE7E32;
               box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); }
               .menu-fix .wr-menu-fix .menu ul li .dropdown-custom .dropdown-custom-2 li {
-                height: 42px; }
+                height: 38px; }
                 .menu-fix .wr-menu-fix .menu ul li .dropdown-custom .dropdown-custom-2 li a {
                   display: block;
-                  padding: 12px 20px; }
+                  padding: 10px 20px; }
                 .menu-fix .wr-menu-fix .menu ul li .dropdown-custom .dropdown-custom-2 li a:hover {
                   background-color: #eaeaea; }
 
