--- a/css/scss/_menu-fix.scss
+++ b/css/scss/_menu-fix.scss
@@ -36,6 +36,7 @@
                             display: inline-block;
                             width: 100%;
                             height: 39px;
+                            position: relative;
                         }
                         li:hover {
                             .dropdown-custom-2 {
@@ -46,12 +47,12 @@
                             li {
                                 a {
                                     display: block;
-                                    padding: 12px 20px;
+                                    padding: 10px 20px;
                                 }
                                 a:hover {
                                     background-color: #eaeaea;
                                 }
-                            height: 42px;
+                            height: 38px;
                             }
                             padding: 0px;
                             
@@ -59,8 +60,8 @@
                             display: none;
                             position: absolute;
                             background-color: $putih;
-                            left: 158px;
-                            top: -3px;
+                            left: 100%;
+                            top: 0;
                             width: 100%;
                             border-left: 3px solid $orange;
                             box-shadow: $shadow-dropdown;
