--- a/css/scss/_list-product.scss
+++ b/css/scss/_list-product.scss
@@ -207,9 +207,20 @@
                     }
                 }
                 .detail {
-                    p {
+                    a {
                         font-family: 'Open-Sans', sans-serif;
                         font-weight: 600;
+                        font-size: 16px;
+                        color: $hitam;
+                        -webkit-transition: .2s color ease-in;
+                        -moz-transition: .2s color ease-in;
+                        -ms-transition: .2s color ease-in;
+                        -o-transition: .2s color ease-in;
+                        transition: .2s color ease-in;
+                    }
+                    a:hover {
+                        text-decoration: none;
+                        color: $orange;
                     }
                     .price-text-color {
                         color: $biru-muda;
