--- a/css/scss/_checkout.scss
+++ b/css/scss/_checkout.scss
@@ -116,7 +116,7 @@
                                         margin-bottom: 0px;
                                         letter-spacing: 2px;
                                     }
-                                    input, select {
+                                    input, .show-tick {
                                         margin-bottom: 15px;
                                     }
                                     padding: 0px 15px;
